--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -221,6 +221,9 @@ RES_ICONS = \
   qt/res/icons/synced.png \
   qt/res/icons/masternode.png \
   qt/res/icons/systemnode.png \
+  qt/res/icons/copy.png \
+  qt/res/icons/show.png \
+  qt/res/icons/hide.png \
   qt/res/icons/toolbar.png \
   qt/res/icons/transaction0.png \
   qt/res/icons/transaction2.png \
