--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -43,7 +43,8 @@ QT_FORMS_UI = \
   qt/forms/multisigaddressentry.ui \
   qt/forms/multisigdialog.ui \
   qt/forms/multisiginputentry.ui \
-  qt/forms/createsystemnodedialog.ui
+  qt/forms/createsystemnodedialog.ui \
+  qt/forms/createmasternodedialog.ui
 
 QT_MOC_CPP = \
   qt/moc_addressbookpage.cpp \
@@ -91,6 +92,7 @@ QT_MOC_CPP = \
   qt/moc_walletframe.cpp \
   qt/moc_privatekeywidget.cpp \
   qt/moc_createsystemnodedialog.cpp \
+  qt/moc_createmasternodedialog.cpp \
   qt/moc_walletmodel.cpp \
   qt/moc_walletview.cpp \
   qt/moc_multisigaddressentry.cpp \
@@ -159,6 +161,7 @@ BITCOIN_QT_H = \
   qt/datetablewidgetitem.h \
   qt/privatekeywidget.h \
   qt/createsystemnodedialog.h \
+  qt/createmasternodedialog.h \
   qt/trafficgraphwidget.h \
   qt/transactiondesc.h \
   qt/transactiondescdialog.h \
@@ -289,6 +292,7 @@ BITCOIN_QT_CPP += \
   qt/datetablewidgetitem.cpp \
   qt/privatekeywidget.cpp \
   qt/createsystemnodedialog.cpp \
+  qt/createmasternodedialog.cpp \
   qt/transactiondesc.cpp \
   qt/transactiondescdialog.cpp \
   qt/transactionfilterproxy.cpp \
