--- a/src/Makefile.omnicore.include
+++ b/src/Makefile.omnicore.include
@@ -19,6 +19,7 @@ OMNICORE_H = \
   omnicore/notifications.h \
   omnicore/omnicore.h \
   omnicore/parse_string.h \
+  omnicore/parsing.h \
   omnicore/pending.h \
   omnicore/rpc.h \
   omnicore/rpcpayload.h \
@@ -35,7 +36,6 @@ OMNICORE_H = \
   omnicore/tally.h \
   omnicore/tx.h \
   omnicore/uint256_extensions.h \
-  omnicore/utils.h \
   omnicore/utilsbitcoin.h \
   omnicore/version.h \
   omnicore/walletcache.h \
@@ -61,6 +61,7 @@ OMNICORE_CPP = \
   omnicore/notifications.cpp \
   omnicore/omnicore.cpp \
   omnicore/parse_string.cpp \
+  omnicore/parsing.cpp \
   omnicore/pending.cpp \
   omnicore/rpc.cpp \
   omnicore/rpcpayload.cpp \
@@ -76,7 +77,6 @@ OMNICORE_CPP = \
   omnicore/sto.cpp \
   omnicore/tally.cpp \
   omnicore/tx.cpp \
-  omnicore/utils.cpp \
   omnicore/utilsbitcoin.cpp \
   omnicore/version.cpp \
   omnicore/walletcache.cpp \
