--- a/src/Makefile.omnicore.include
+++ b/src/Makefile.omnicore.include
@@ -13,7 +13,6 @@ OMNICORE_H = \
   omnicore/errors.h \
   omnicore/fees.h \
   omnicore/log.h \
-  omnicore/mbstring.h \
   omnicore/mdex.h \
   omnicore/notifications.h \
   omnicore/omnicore.h \
@@ -21,6 +20,7 @@ OMNICORE_H = \
   omnicore/parsing.h \
   omnicore/pending.h \
   omnicore/rpc.h \
+  omnicore/rpcmbstring.h \
   omnicore/rpcpayload.h \
   omnicore/rpcrawtx.h \
   omnicore/rpcrequirements.h \
@@ -56,7 +56,6 @@ OMNICORE_CPP = \
   omnicore/encoding.cpp \
   omnicore/fees.cpp \
   omnicore/log.cpp \
-  omnicore/mbstring.cpp \
   omnicore/mdex.cpp \
   omnicore/notifications.cpp \
   omnicore/omnicore.cpp \
@@ -64,6 +63,7 @@ OMNICORE_CPP = \
   omnicore/parsing.cpp \
   omnicore/pending.cpp \
   omnicore/rpc.cpp \
+  omnicore/rpcmbstring.cpp \
   omnicore/rpcpayload.cpp \
   omnicore/rpcrawtx.cpp \
   omnicore/rpcrequirements.cpp \
