--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -334,7 +334,8 @@ crypto_libsyscoin_crypto_a_SOURCES = \
   crypto/sha256.cpp \
   crypto/sha256.h \
   crypto/sha512.cpp \
-  crypto/sha512.h
+  crypto/sha512.h \
+  crypto/sph_types.h
 
 # common: shared between syscoind, and syscoin-qt and non-server tools
 libsyscoin_common_a_CPPFLAGS = $(AM_CPPFLAGS) $(SYSCOIN_INCLUDES)
