--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,11 @@
 language: cpp
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y -qq autoconf build-essential pkg-config libssl-dev libboost-all-dev
-  - sudo apt-get install -y -qq miniupnpc libminiupnpc-dev
-  - sudo apt-get install -y -qq qtbase5-dev qttools5-dev-tools
-  - sudo apt-get install -y -qq libdb++-dev
-  - sudo apt-get install -y -qq gettext
+  - ./contrib/vagrant/dependencies-ubuntu.sh
 install: true
 sudo: required
 script:
   - ./contrib/install_db4.sh `pwd`
+#flags arent being picked up, so need to link
   - sudo ln -s `pwd`/db4/include /usr/local/include/bdb4.8
   - sudo ln -s `pwd`/db4/lib/*.a /usr/local/lib
   - ./autogen.sh
