--- a/buildspecs/buildspec-ubuntu-17.04.yml
+++ b/buildspecs/buildspec-ubuntu-17.04.yml
@@ -19,18 +19,17 @@ phases:
       # - command
   build:
     commands:
-       - echo "Building raven"
        - ./autogen.sh
        - ./configure --enable-cxx --disable-shared --with-pic --prefix=$BDB_PREFIX CXXFLAGS="-fPIC" CPPFLAGS="-fPIC"
-       - make -j9
+       - make -j5
   post_build:
     commands:
-       - mkdir -p ./build-linux/ubuntu16.04
-       - cp src/ravend ./build-linux/ubuntu16.04/
-       - cp src/raven-cli ./build-linux/ubuntu16.04/
-       - cp src/qt/raven-qt ./build-linux/ubuntu16.04/
-       - cp src/raven-tx ./build-linux/ubuntu16.04/
-       - cd ./build-linux/ubuntu16.04
+       - mkdir -p ./build-linux/ubuntu17.04
+       - cp src/ravend ./build-linux/ubuntu17.04/
+       - cp src/raven-cli ./build-linux/ubuntu17.04/
+       - cp src/raven-tx ./build-linux/ubuntu17.04/
+       - cp src/qt/raven-qt ./build-linux/ubuntu17.04/
+       - cd ./build-linux/ubuntu17.04
        - md5sum ravend raven-cli raven-qt raven-tx > md5sum
        - sha256sum ravend raven-cli raven-qt raven-tx > sha256sum
        - cd ..
@@ -38,17 +37,16 @@ phases:
        - cd RavenBinaries/pre-release/linux
        - BUILD_ID=`echo $CODEBUILD_BUILD_ID | sed 's/:/_/g'`
        - git checkout -b "code_build_$BUILD_ID"
-       - rsync -av ../../../ubuntu16.04/* ./ubuntu16.04
+       - rsync -av ../../../ubuntu17.04/* ./ubuntu17.04/
        - git add .
        - git commit -m "Releasing build $BUILD_ID" --author "Code Build <ops@mediciventures.com>"
        - git push origin "code_build_$BUILD_ID"
 artifacts:
   files:
-     - ./build-linux/ubuntu16.04/ravend
-     - ./build-linux/ubuntu16.04/raven-cli
-     - ./build-linux/ubuntu16.04/raven-tx
-     - ./build-linux/ubuntu16.04/raven-qt
-     - ./build-linux/ubuntu16.04/md5sum
-     - ./build-linux/ubuntu16.04/sha256sum
+     - ./build-linux/ubuntu17.04/ravend
+     - ./build-linux/ubuntu17.04/raven-cli
+     - ./build-linux/ubuntu17.04/raven-qt
+     - ./build-linux/ubuntu17.04/raven-tx
+     - ./build-linux/ubuntu17.04/md5sum
+     - ./build-linux/ubuntu17.04/sha256sum
   discard-paths: yes
-  #base-directory: location
