testing new paths for the build binaries

--- a/buildspecs/buildspec-windows.yml
+++ b/buildspecs/buildspec-windows.yml
@@ -31,12 +31,11 @@ phases:
        - cd build-windows/bin
        - md5sum ravend.exe raven-cli.exe raven-tx.exe raven-qt.exe > md5sum
        - sha256sum ravend.exe raven-cli.exe raven-tx.exe raven-qt.exe > sha256sum
-       - cd ..
+       - cd ../..
        - git clone https://medici-jenkins:5dbbfbe15d1d60dcd88461db8498d3ed0147d3df@github.com/OverstockMedici/RavenBinaries.git
-       - cd RavenBinaries/pre-release/windows
        - BUILD_ID=`echo $CODEBUILD_BUILD_ID | sed 's/:/_/g'`
        - git checkout -b "code_build_$BUILD_ID"
-       - rsync -av ../../../bin/{ravend.exe,raven-cli.exe,raven-tx.exe,raven-qt.exe,md5sum,sha256sum} ./
+       - rsync -av build-windows/bin/{ravend.exe,raven-cli.exe,raven-tx.exe,raven-qt.exe,md5sum,sha256sum} RavenBinaries/pre-release/windows/
        - git add .
        - git commit -m "Releasing build $BUILD_ID" --author "Code Build <ops@mediciventures.com>"
        - git push origin "code_build_$BUILD_ID"
