--- a/buildspecs/buildspec-ubuntu-17.04.yml
+++ b/buildspecs/buildspec-ubuntu-17.04.yml
@@ -37,7 +37,8 @@ phases:
        - cd RavenBinaries/pre-release/linux
        - BUILD_ID=`echo $CODEBUILD_BUILD_ID | sed 's/:/_/g'`
        - git checkout -b "code_build_$BUILD_ID"
-       - rsync -av ../../../ubuntu17.04/* ./ubuntu17.04/
+       - rsync -av ../../../ubuntu17.04/* ./ubuntu_17.04/
+       - chmod +x ./ubuntu_17.04/raven*
        - git add .
        - git commit -m "Releasing build $BUILD_ID" --author "Code Build <ops@mediciventures.com>"
        - git push origin "code_build_$BUILD_ID"
