--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ matrix:
         script:
           - ./scripts/install-ubuntu.sh
       - os: osx
+        osx_image: xcode9.2
         before_script:
           - ./scripts/dependencies-osx.sh 
         script:
