docker build to increase number of os consolidate peercoin directory to script print out compiler version

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: false
 language: cpp
 matrix:
   include:
+      - services: docker
+        scripts:
+          - docker build -f scripts/docker/debian/Dockerfile-stretch
       - os: linux
         sudo: required
         before_install:
