--- a/contrib/vagrant/Vagrantfile
+++ b/contrib/vagrant/Vagrantfile
@@ -6,21 +6,22 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu/xenial64"
+  #config.disksize.size = '20GB'
   config.vm.provision :shell, :path => "install.sh", privileged: false
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  config.vm.synced_folder "../../", "/vagrant"
+  config.vm.synced_folder "../../", "/peercoin"
 
   config.vm.provider "virtualbox" do |vb|
-    vb.customize ["modifyvm", :id, "--memory", "8092"]
+    vb.customize ["modifyvm", :id, "--memory", "8192"]
     vb.customize ["modifyvm", :id, "--cpus", "4"]
   end
 
   config.vm.provider "vmware" do |vmw|
-    vmw.customize ["modifyvm", :id, "--memory", "2048"]
+    vmw.customize ["modifyvm", :id, "--memory", "8192"]
   end
 end
 
