--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,14 @@ sudo: false
 language: cpp
 matrix:
   include:
-      - services: docker
+      - os: linux
+        services: docker
         scripts:
           - docker build -f scripts/docker/debian/Dockerfile-stretch
+      - os: linux
+        services: docker
+        scripts:
+          - docker build -f scripts/docker/debian/Dockerfile-jessie
       - os: linux
         sudo: required
         before_install:
