--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -28,7 +28,7 @@ packages:
 - "ca-certificates"
 - "python"
 remotes:
-- "url": "https://github.com/raven/raven.git"
+- "url": "https://github.com/RavenProject/Ravencoin.git"
   "dir": "raven"
 files: []
 script: |
