partial bitcoin-core/gui#79: Embed monospaced font
includes:
- 89e421918ee8b9c8439317f747e5c37f0733d94b
- 623de12d040af89ff7c25de6eb0a19c67179dc5f

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -352,7 +352,8 @@ RES_FONTS = \
   qt/res/fonts/Montserrat/Montserrat-SemiBold.otf \
   qt/res/fonts/Montserrat/Montserrat-SemiBoldItalic.otf \
   qt/res/fonts/Montserrat/Montserrat-Thin.otf \
-  qt/res/fonts/Montserrat/Montserrat-ThinItalic.otf
+  qt/res/fonts/Montserrat/Montserrat-ThinItalic.otf \
+  qt/res/fonts/RobotoMono-Bold.ttf
 
 RES_ANIMATION = $(wildcard $(srcdir)/qt/res/animation/spinner-*.png)
 
