libtool: Don't hardcode rpath

--- a/configure.ac
+++ b/configure.ac
@@ -106,6 +106,10 @@ dnl OpenBSD ships with 2.4.2
 LT_PREREQ([2.4.2])
 dnl Libtool init checks.
 LT_INIT([pic-only win32-dll])
+_LT_TAGVAR(hardcode_libdir_flag_spec, )=""
+_LT_TAGVAR(hardcode_libdir_flag_spec, CXX)=""
+_LT_TAGVAR(hardcode_into_libs, )="no"
+_LT_TAGVAR(hardcode_into_libs, CXX)="no"
 
 dnl Check/return PATH for base programs.
 AC_PATH_TOOL([AR], [ar])
