--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -179,18 +179,18 @@ i686-pc-linux-gnu:
   variables:
     HOST: i686-pc-linux-gnu
 
-x86_64-unknown-linux-gnu-debug:
+x86_64-pc-linux-gnu-debug:
   extends: .build-depends-template
   variables:
-    HOST: x86_64-unknown-linux-gnu
+    HOST: x86_64-pc-linux-gnu
     DEP_OPTS: "DEBUG=1"
 
-x86_64-unknown-linux-gnu-nowallet:
+x86_64-pc-linux-gnu-nowallet:
   extends:
     - .build-depends-template
     - .skip-in-fast-mode-template
   variables:
-    HOST: x86_64-unknown-linux-gnu
+    HOST: x86_64-pc-linux-gnu
     DEP_OPTS: "NO_WALLET=1"
 
 x86_64-apple-darwin19:
@@ -239,21 +239,21 @@ linux32_ubsan-build:
 linux64-build:
   extends: .build-template
   needs:
-    - x86_64-unknown-linux-gnu-debug
+    - x86_64-pc-linux-gnu-debug
   variables:
     BUILD_TARGET: linux64
 
 linux64_cxx20-build:
   extends: .build-template
   needs:
-    - x86_64-unknown-linux-gnu-debug
+    - x86_64-pc-linux-gnu-debug
   variables:
     BUILD_TARGET: linux64_cxx20
 
 linux64_fuzz-build:
   extends: .build-template
   needs:
-    - x86_64-unknown-linux-gnu-debug
+    - x86_64-pc-linux-gnu-debug
   variables:
     BUILD_TARGET: linux64_fuzz
 
@@ -262,7 +262,7 @@ linux64_tsan-build:
     - .build-template
     - .skip-in-fast-mode-template
   needs:
-    - x86_64-unknown-linux-gnu-debug
+    - x86_64-pc-linux-gnu-debug
   variables:
     BUILD_TARGET: linux64_tsan
 
@@ -271,7 +271,7 @@ linux64_nowallet-build:
     - .build-template
     - .skip-in-fast-mode-template
   needs:
-    - x86_64-unknown-linux-gnu-nowallet
+    - x86_64-pc-linux-gnu-nowallet
   variables:
     BUILD_TARGET: linux64_nowallet
 
