build: Add `show-%` target for multi-line variables and debug info

--- a/depends/Makefile
+++ b/depends/Makefile
@@ -1,8 +1,16 @@
 .NOTPARALLEL :
 
 # Pattern rule to print variables, e.g. make print-top_srcdir
+# To print multi-line variables and/or additional debug info, use show-%
 print-%: FORCE
 	@echo '$*'='$($*)'
+
+show-% : FORCE
+	$(info - name:   $*)
+	$(info - origin: $(origin $*))
+	$(info - flavor: $(flavor $*))
+	$(info - value, printed from the new line:)
+	$(info $($*))
 
 # When invoking a sub-make, keep only the command line variable definitions
 # matching the pattern in the filter function.
