ci: add text extraction dependency to permit running translation routines

--- a/contrib/containers/ci/Dockerfile
+++ b/contrib/containers/ci/Dockerfile
@@ -20,6 +20,7 @@ RUN apt-get update && apt-get install $APT_ARGS \
     cmake \
     git \
     g++ \
+    gettext \
     wget \
     unzip \
     libtool \
